# EPL-ML-project

./: .gitignore  README.md  epl_ml.py  main.py  pyproject.toml  ruff.toml
.github/workflows/: actions-ci.yml  actions.ci.yml  linting.ci.yml
data/: PremierLeague.csv
src/: NaiveBayes.py  lda.py  lse.py  pca.py  preprocessing.py  utils.py
testing/: test_preprocessing.py
