[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["Konstantinos Amplianitis <amplianitiskonstantinos@gmail.com>"]
readme = "README.md"

[tool.poetry.group.dev]
optional = true

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.4"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
